# marketing-app-ad-gen

./: .gitignore  README.md  adgen-backend-nginx  adgen-backend.service  package.json  presentation.md  project-presentation.md  script.md  test-backend.sh  vercel.json
ad-generation-tool/: README.md  SUPABASE_INTEGRATION_SUMMARY.md  SUPABASE_SETUP.md  next.config.js  next.config.ts  package-lock.json  package.json  supabase_table_setup.sql  vercel.json
api/: generate_script.py  regenerate_script.py  requirements.txt
backend/regenerate_script/: README.md  pyproject.toml
backend/regenerate_script/src/Users/abhivir42/projects/marketing-app-ad-gen/backend/regenerate_script/: refined_script.md
backend/regenerate_script/src/home/azureuser/marketing-app-ad-gen/backend/regenerate_script/: refined_script.md
backend/regenerate_script/src/regenerate_script/: crew.py  main.py
backend/regenerate_script/src/regenerate_script/config/: agents.yaml  tasks.yaml
backend/script_generation/: README.md  pyproject.toml
backend/script_generation/src/Users/abhivir42/projects/marketing-app-ad-gen/backend/script_generation/: radio_script.md
backend/script_generation/src/home/azureuser/marketing-app-ad-gen/backend/script_generation/: radio_script.md
backend/script_generation/src/home/azureuser/marketing-app-ad-gen/backend/script_generation/src/home/azureuser/marketing-app-ad-gen/backend/script_generation/: radio_script.md
backend/script_generation/src/script_generation/: crew.py  main.py
backend/script_generation/src/script_generation/config/: agents.yaml  tasks.yaml
(+46 files in other folders)
