[project]
name = "regenerate_script"
version = "0.1.0"
description = "regenerate_script using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
regenerate_script = "regenerate_script.main:run"
run_crew = "regenerate_script.main:run"
train = "regenerate_script.main:train"
replay = "regenerate_script.main:replay"
test = "regenerate_script.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
